@@ -1,3 +1,11 @@
+2007-04-11  Gary Thomas  <gary@mlbassoc.com>
+2007-04-11  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/fs/fileio.c: Temporary kludge to treat flash correctly if either
+	flash v1 or flash v2 used with this file.
+	(do_mount): silence warning. Include accidentally omitted printf arg.
+	(do_list): silence warning.
+
 2007-01-22  Peter Korsgaard  <peter.korsgaard@barco.com>
 
 	* src/load.c (do_load): Reset entry address before load so
